added getByType&Brand
